Simplify JUnit assertions
[#168714093]